tests/should_succeed/indexing_bug.jou
declare putchar(ch: int) -> int

def main() -> int:
    # Output: i
    putchar("012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789abcdefghi"[128 as byte])
    putchar('\n')
    return 0
