tests/syntax_error/bad_byte.jou
def main() -> int:
    return `  # Error: unexpected byte '`' (0x60)
